$Id$
===============================================================

213	Luke Howard <lukeh@padl.com>

	* fix netgroup compilation error when debugging is
	  enabled

212	Luke Howard <lukeh@padl.com>

	* Solaris netgroup support test release
	* fix crasher in do_sasl_interact()
	* do_sasl_interact() needs to strdup() result for
	  Cyrus SASL 1.x but not 2.x
	* merge in LDAP debug patch from Howard Chu
	* try alternate search descriptors on NSS_NOTFOUND
	  as well as NSS_SUCCESS

211	Luke Howard <lukeh@padl.com>

	* do AT_OC_MAP cache initialization at config init
	* BSD build fixes
	* replace [h]errno2nssstat lookup tables with switch
	  statement; should help building on AIX!

210	Luke Howard <lukeh@padl.com>

	* initialize DBT structures
	* fix SASL crasher

209	Luke Howard <lukeh@padl.com>

	* fix SASL breakage

208	Luke Howard <lukeh@padl.com>

	* use socklen_t not int
	* remove OpenLDAP SASL code
	* incorporated patches from (see below) Geert Jansen
	* add the "sasl_secprops" option to configure SASL
	  security layers (usage as for OpenLDAP ldap.conf)
	* add the "krb5_ccname" option to specify the 
	  location of the Kerberos ticket cache
	  (requires --enable-configurable-krb5-ccname for
	  now as it is a fairly coarse solution to a lack
	  of appropriate API in the Kerberos libraries)
	* add support for native Active Directory password
	  policy attributes (enabled if shadowLastChange is
	  mapped to pwdLastSet)
	* add "nss_override_attribute_value" and
	  "nss_default_attribute_value" keywords for over-
	  riding and setting default attribute values,
	  respectively

207	Luke Howard <lukeh@padl.com>

	* work without LDAP_OPT_X_TLS_RANDOM_FILE
	* fix schema mapping regression from nss_ldap-205;
	  attribute mapping now works again

205	Luke Howard <lukeh@padl.com>

	* build with Sleepycat DB without db185 compat layer
	  (tested with 4.x; needs testing on 3.x)

204	Luke Howard <lukeh@padl.com>

	* Linux netgroup implementation from Larry Lile