@@ -18,6 +18,7 @@ AC_ARG_WITH(ldap-lib, [  --with-ldap-lib=type      select ldap library [auto|net
 AC_ARG_WITH(ldap-dir, [  --with-ldap-dir=DIR       base directory of ldap SDK])
 AC_ARG_WITH(ldap-conf-file, [  --with-ldap-conf-file     path to LDAP configuration file], [AC_DEFINE_UNQUOTED(NSS_LDAP_PATH_CONF, "$with_ldap_conf_file")])
 AC_ARG_WITH(ldap-secret-file, [  --with-ldap-secret-file   path to LDAP root secret file], [AC_DEFINE_UNQUOTED(NSS_LDAP_PATH_ROOTPASSWD, "$with_ldap_secret_file")])
+AC_ARG_WITH(gssapi-dir, [  --with-gssapi-dir=DIR     base directory of gssapi SDK])
 
 if test "$ac_cv_prog_gcc" = "yes"; then CFLAGS="$CFLAGS -Wall -fPIC"; fi
 
@@ -81,6 +82,11 @@ if test -n "$with_ldap_dir"; then
   esac  
 fi
 
+if test -n "$with_gssapi_dir"; then
+  CPPFLAGS="$CPPFLAGS -I$with_gssapi_dir/include"
+  LDFLAGS="$LDFLAGS -L$with_gssapi_dir/lib"
+fi
+
 AC_SUBST(nss_ldap_so_LD)
 AC_SUBST(nss_ldap_so_LDFLAGS)
 AC_SUBST(NSS_LDAP_LDFLAGS)
@@ -136,6 +142,7 @@ AC_CHECK_HEADERS(sasl.h sasl/sasl.h)
 AC_CHECK_HEADERS(strings.h)
 AC_CHECK_HEADERS(gssldap.h)
 AC_CHECK_HEADERS(gsssasl.h)
+AC_CHECK_HEADERS(gssapi/gssapi_krb5.h)
 
 AC_CHECK_LIB(resolv, main)
 AC_CHECK_LIB(nsl, main)
@@ -191,6 +198,7 @@ dnl AC_CHECK_LIB(k5crypto, main,[LIBS="-lk5crypto $LIBS"],,$LIBS)
 dnl AC_CHECK_LIB(krb5, main,[LIBS="-lkrb5 $LIBS"],,$LIBS)
 dnl AC_CHECK_LIB(krb4, main,[LIBS="-lkrb4 $LIBS"],,$LIBS)
 dnl AC_CHECK_LIB(sasl, sasl_client_init,[LIBS="-lsasl $LIBS"],,$LIBS)
+AC_CHECK_LIB(gssapi_krb5, gss_krb5_ccache_name)
 if test -z "$found_ldap_lib" -a \( $with_ldap_lib = auto -o $with_ldap_lib = umich -o $with_ldap_lib = openldap \); then
   AC_CHECK_LIB(lber, main)
   AC_CHECK_LIB(ldap, main, [LIBS="-lldap $LIBS" found_ldap_lib=yes],,$LIBS)
